syntax = "proto3";

package protoBuffer;
option go_package = "MapReduceGo/stubs";

message NumberChunk{
  repeated int32 numbers = 1;
}

message MapperResponse{
  string status = 1;
}

service MapperService{
  rpc ProcessChunk(NumberChunk) returns (MapperResponse);
}